src/test/ui/const-generics/const-fn-with-const-param.stderr
error: const parameters are not permitted in const functions
  --> $DIR/const-fn-with-const-param.rs:4:1
   |
LL |   const fn const_u32_identity<const X: u32>() -> u32 {
   |   ^----
   |   |
   |  _`const` because of this
   | |
LL | |
LL | |     X
LL | | }
   | |_^

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-fn-with-const-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to previous error

